<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView 
        android:id="@+id/txtSelectRegion"
        style="@style/TextWizardHeader"
        android:layout_alignParentTop="true"
        android:text="@string/lbl_select_region"/>
    
    <TextView 
        android:id="@+id/txtDistrict"
        style="@style/TextWizardLabel"
        android:layout_below="@+id/txtSelectRegion"
        android:text="@string/lbl_district"/>
    <Spinner 
        android:id="@+id/spnrDistrict"
        style="@style/SpinnerWizard"
        android:layout_below="@+id/txtDistrict"/>
    <TextView 
        android:id="@+id/txtTehsil"
        style="@style/TextWizardLabel"
        android:layout_below="@+id/spnrDistrict"
        android:text="@string/lbl_tehsil"/>
    <Spinner 
        android:id="@+id/spnrTehsil"
        style="@style/SpinnerWizard"
        android:layout_below="@+id/txtTehsil"/>
    <TextView 
        android:id="@+id/txtUc"
        style="@style/TextWizardLabel"
        android:layout_below="@+id/spnrTehsil"
        android:text="@string/lbl_uc"/>
    <Spinner 
        android:id="@+id/spnrUc"
        style="@style/SpinnerWizard"
        android:layout_below="@+id/txtUc"/>
    
    <Button
        android:id="@+id/btnNext"
        style="@style/ButtonBottomWizard"
        android:text="@string/next" />    

</RelativeLayout>
